--- a/Ejer_gitkraken_G1.ipynb
+++ b/Ejer_gitkraken_G1.ipynb
@@ -295,12 +295,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "me caga gitkraken:(\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 32 \n",
+    "print('me caga gitkraken:(')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# 32"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -319,7 +335,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
